tests/syntax_error/declare_global_with_value.jou
# This code doesn't make any sense, because declare means "this
# thing is defined somewhere else and I only reference it here".
# So whatever other place actually has the variable is responsible
# for giving it a default value.
declare global x: int = 1   # Error: a value cannot be given when declaring a global variable
